Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
        - name: my-react-app
          image: azregistry.azurecr.io/my-react-app:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-react-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - parties.p.frii.site
    secretName: parties-tls  
  rules:
  - host: parties.p.frii.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-react-app-service  
            port:
              number: 80
